# gitoma-bench-ladder

./: .clippy.toml  .coveragerc  .gitignore  .golangci.yml  .pre-commit-config.yaml  .ruff.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  go.mod  golden.json  mkdocs.yml  package.json  pyproject.toml  ruff.toml  rustfmt.toml
.github/: dependabot.yml
.github/workflows/: bench-pages.yml
bench/: bench_rung.py  build_site.py
bench/results/: rung-0-20260422T113718.json  rung-1-20260422T114949.json  rung-1-20260422T120227.json  rung-1-20260422T121610.json  rung-1-20260422T122913.json  rung-1-20260422T135152.json  rung-2-20260422T143738.json  rung-3-20260422T145422.json  rung-3-20260422T152534.json  rung-3-20260422T154315.json  rung-3-20260422T160942.json  rung-3-20260422T164131.json  rung-3-20260422T172515.json  rung-3-20260422T193608.json  rung-3-20260423T051837.json  rung-3-20260423T052652.json  rung-3-20260423T074727.json  rung-3-20260423T090102.json  rung-4-20260423T050759.json
docs/: CONTRIBUTING.md  DEVELOPMENT.md  LICENSE  README.md  SECURITY.md  api-reference.md  getting-started.md  index.md  mkdocs.yml
rung-0/: README.md  calc.py
rung-1/: README.md  golden.json
rung-1/server/: server_test.go
rung-1/store/: store.go
rung-2/src/: calculator.rs
rung-2/tests/: calculator_test.rs
rung-3/: README.md  pyproject.toml
rung-3/tests/: test_db.py
rung-4/: golden.json  package.json
server/: server.go
src/: __init__.py  db.py  main.py  main.rs  render.js
tests/: render.test.js  test_calc.py  test_db.py
