[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gitoma-bench-rung-3"
version = "0.0.1"
description = "Rung 3 of the gitoma bench ladder — Python + SQLite, SQL-injection bug."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
per-file-ignores = [
    "src/db.py: F841, F821"
]

[tool.ruff.lint] 
select = ["E","F633","F841","F821"]
ignore = ["E203", "E501"]

[tool.mypy]
show-traceback = true
ignore-missing-imports = true
check-untyped-defs = false
warn-unused-ignores = true
ignore-missing-runtime-typing = true

[tool.coverage]
config = ".coveragerc"