[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gitoma-bench-rung-3"
version = "0.0.1"
description = "Rung 3 of the gitoma bench ladder — Python + SQLite, SQL-injection bug."
requires-python = ">=3.10"

[tool.ruff.lint]
select = ["E","F","W"]
ignore = ["E203", "E501", "W503"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]