[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "gitoma-bench-rung-3"
version = "0.0.1"
description = "Rung 3 of the gitoma bench ladder — Python + SQLite, SQL-injection bug."
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
select = ["A", "B", "C", "D", "E", "F", "I"]
ignore = ["F841"]

[tool.mypy]
check_untyped_calls = true
ignore_missing_imports = true
strict = true